--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CallRoulette</string>
+    <string name="app_capability_url"></string>
+    <string name="app_hangup_url"></string>
 </resources>
