Add the Twilio number. However it is wrong. Need to get a real one. Currently using a dummy number. Can configure later on Heroku

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CallRoulette</string>
-    <string name="app_capability_url"></string>
-    <string name="app_hangup_url"></string>
+    <!--TODO:rehook the app with a valid number from Twilio-->
+    <string name="app_capability_url">https://chatroulette-server.herokuapp.com//token</string>
+    <string name="app_hangup_url">https://chatroulette-server.herokuapp.com//hangup</string>
 </resources>
